--- a/AUPSUP_HTML5_SEARCH_HU/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/view/Worklist.view.xml
@@ -69,9 +69,9 @@
 													secondDateValue="{path:'filterHUJSONModel>/lfDateTo'}"/>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="RangeDatewa" label="{i18n>RangeDateWA}">
+										<fb:FilterItem name="RangeDatewa" label="{i18n>RangeDateWA}" visible="false">
 											<fb:control>
-												<m:DateRangeSelection dateValue="{path:'filterHUJSONModel>/waDateFrom'}" valueFormat="YYYYMMdd" displayFormat="dd MMM yyyy"
+												<m:DateRangeSelection dateValue="{path:'filterHUJSONModel>/waDateFrom'}"  visible="false" valueFormat="YYYYMMdd" displayFormat="dd MMM yyyy"
 													secondDateValue="{path:'filterHUJSONModel>/waDateTo'}"/>
 											</fb:control>
 										</fb:FilterItem>
@@ -91,7 +91,7 @@
 											<!--	<smartTable:SmartTable id="smartTable_ResponsiveTable" smartFilterId="smartFilterBar" tableType="ResponsiveTable" editable="false"
 												entitySet="Buyers" useVariantManagement="true" useTablePersonalisation="true" header="Products" showRowCount="true" useExportToExcel="false"
 												enableAutoBinding="true" persistencyKey="SmartTablePKey">-->
-											<m:Table id="HUHeadersTable" items="{HUJSONModel>/results}" sticky="ColumnHeaders,HeaderToolbar">
+											<m:Table id="HUHeadersTable" items="{HUJSONModel>/results}" sticky="ColumnHeaders,HeaderToolbar" mode="MultiSelect">
 												<m:headerToolbar>
 													<m:OverflowToolbar>
 														<m:content>
@@ -103,7 +103,7 @@
 																	<v:VariantItem text="{variantsJSONModel>VARIANT_NAME}" key="{variantsJSONModel>VARIANT_NAME}"></v:VariantItem>
 																</v:variantItems>
 															</v:VariantManagement>
-															
+															<m:Button icon="sap-icon://download" press="onDownloadZip" tooltip="{i18n>DownloadSelected}"/>
 															<m:Button icon="sap-icon://excel-attachment" press="onExport" tooltip="{i18n>Export_Excel}"/>
 															<m:Button icon="sap-icon://vertical-grip" visible="false" press="onColumnSelection" tooltip="{i18n>personalization}"/>
 														</m:content>
@@ -143,14 +143,14 @@
 													<m:ColumnListItem>
 														<m:cells>
 															<m:Text text="{HUJSONModel>SYSID}"/>
-															<m:Text text="{HUJSONModel>VENUM}"/>
+															<m:Text text="{path : 'HUJSONModel>VENUM', formatter : '.removeZeroBefore'}"/>
 															<m:Text text="{HUJSONModel>VEPOS}"/>
 															<m:Text text="{HUJSONModel>VBELN}"/>
 															<m:Text text="{HUJSONModel>POSNR}"/>
-															<m:Text text="{HUJSONModel>EXIDV}"/>
-															<m:Text text="{HUJSONModel>MATNR}"/>
+															<m:Text text="{path : 'HUJSONModel>EXIDV', formatter : '.removeZeroBefore'}"/>
+															<m:Text text="{path : 'HUJSONModel>MATNR', formatter : '.removeZeroBefore'}"/>
 															<m:Text text="{HUJSONModel>WERKS}"/>
-															<m:Text text="{HUJSONModel>TMENG}"/>
+															<m:Text text="{path : 'HUJSONModel>TMENG', formatter : '.importFormatter'}"/>
 															<m:Button icon="sap-icon://print" press="onItemPrintHU"/>
 														</m:cells>
 													</m:ColumnListItem>
