--- a/AUPSUP_HTML5_DOC_MANAG/webapp/view/App.view.xml
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/view/App.view.xml
@@ -1,12 +1,4 @@
-<mvc:View controllerName="it.aupsup.docmanagement.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
-	xmlns="sap.m">
-	<Shell id="shell">
-		<App id="app">
-			<pages>
-				<Page id="page" title="{i18n>title}">
-					<content></content>
-				</Page>
-			</pages>
-		</App>
-	</Shell>
-</mvc:View>
+<mvc:View controllerName="it.aupsup.docmanagement.controller.App" xmlns:mvc="sap.ui.core.mvc"
+	displayBlock="true" xmlns="sap.m">
+	<App id="idAppControl"/> 
+</mvc:View> 
