--- a/AUPSUP_HTML5_DOC_MANAG/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_DOC_MANAG/webapp/view/Worklist.view.xml
@@ -1,4 +1,7 @@
-<mvc:View controllerName="it.aupsup.docmanagement.controller.Worklist" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" xmlns:table="sap.ui.table" xmlns:core="sap.ui.core" xmlns:fb="sap.ui.comp.filterbar" xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form" xmlns:u="sap.ui.unified">
+<mvc:View controllerName="it.aupsup.docmanagement.controller.Worklist" 
+xmlns:mvc="sap.ui.core.mvc" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" 
+xmlns:table="sap.ui.table" xmlns:core="sap.ui.core" xmlns:fb="sap.ui.comp.filterbar" 
+xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form" xmlns:u="sap.ui.unified">
 	<m:Shell id="shell" appWidthLimited="false">
 		<m:App id="app">
 			<m:pages>
@@ -108,6 +111,7 @@
 													</m:Column>
 													<m:Column minScreenWidth="Desktop" demandPopin="true" width="3rem"></m:Column>
 													<m:Column minScreenWidth="Desktop" demandPopin="true" width="3rem"></m:Column>
+													<m:Column minScreenWidth="Desktop" demandPopin="true" width="3rem"></m:Column>
 												</m:columns>
 												<m:items>
 													<m:ColumnListItem>
@@ -123,8 +127,9 @@
 															<m:Text text="{ path: 'DocumentJSONModel>UPLOAD_DATE', type: 'it.aupsup.docmanagement.type.Date' }" />
 															<m:Text text="{ path: 'DocumentJSONModel>UPLOAD_EXP_DATE', type: 'it.aupsup.docmanagement.type.Date' }" />
 															<m:Text text="{ path: 'DocumentJSONModel>END_DATE_DOC', type: 'it.aupsup.docmanagement.type.Date' }" />
-															<u:FileUploader id="uploadDocBtn" class="pickingUploader" visible="{DocumentJSONModel>IS_UPLOAD}" sameFilenameAllowed="true" change="onItemUpload" fileType="xlsx,docx,pdf,txt,doc,xls" iconFirst="true" buttonOnly="true" typeMissmatch="onTypeMissmatch" maximumFileSize="5" fileSizeExceed="onFileSizeExceed" iconOnly="true" icon="sap-icon://upload" tooltip="upload doc"/>
-															<m:Button icon="sap-icon://download" press="onItemDownload" iconOnly="true" visible="{DocumentJSONModel>IS_DOWNLOAD}" />
+															<m:Button icon="sap-icon://accept" press="onApprove" visible="{= ${DocumentJSONModel>WORKFLOW} === 'IA'}" />
+															<u:FileUploader id="uploadDocBtn" visible="{= ${DocumentJSONModel>VERSION_STATE} !== 'I' &amp;&amp; ${DocumentJSONModel>IS_UPLOAD}}" change="onItemUpload" fileType="xlsx,docx,pdf,txt,doc,xls" iconFirst="true" buttonOnly="true" typeMissmatch="onTypeMissmatch" maximumFileSize="5" fileSizeExceed="onFileSizeExceed" iconOnly="true" icon="sap-icon://upload" tooltip="upload doc" />
+															<m:Button icon="sap-icon://download" press="onItemDownload" visible="{= ${DocumentJSONModel>VERSION_STATE} !== 'I' &amp;&amp; ${DocumentJSONModel>IS_DOWNLOAD}}" />
 														</m:cells>
 													</m:ColumnListItem>
 												</m:items>
