--- a/AUPSUP_HTML5_CONTRACTS/webapp/view/App.view.xml
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="it.aupsup.purchords.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
+<mvc:View controllerName="it.aupsup.contracts.controller.App" xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
 	xmlns="sap.m">
 	<App id="idAppControl"/>
 </mvc:View>
