--- a/AUPSUP_HTML5_CONTRACTS/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_CONTRACTS/webapp/view/OrderPositionDetail.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="it.aupsup.purchords.controller.OrderPositionDetail" 
+<mvc:View controllerName="it.aupsup.contracts.controller.OrderPositionDetail" 
 	xmlns:mvc="sap.ui.core.mvc" 
 	xmlns="sap.uxap" 
 	xmlns:layout="sap.ui.layout" 
@@ -92,7 +92,7 @@
 														<m:Text text="{OrderPrositionJSONModel>EBELN}"/>
 														<m:Text text="{OrderPrositionJSONModel>EBELP}"/>
 														<m:Text text="{OrderPrositionJSONModel>ETENR}"/>
-														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.purchords.type.Date' }"/>
+														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.contracts.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
 														<m:Text text="{path : 'OrderPrositionJSONModel>MENGE', formatter : '.importFormatter'}"/>
 														<!--<m:Text text="{OrderPrositionJSONModel>WEMNG}"/>-->
@@ -151,7 +151,7 @@
 														<m:Text text="{OrderPrositionJSONModel>EBELN}"/>
 														<m:Text text="{OrderPrositionJSONModel>EBELP}"/>
 														<m:Text text="{OrderPrositionJSONModel>ETENS}"/>
-														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.purchords.type.Date' }"/>
+														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.contracts.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
 														<m:Text text="{path : 'OrderPrositionJSONModel>MENGE', formatter : '.importFormatter'}"/>
 														<m:Text text="{OrderPrositionJSONModel>DABMG}"/>
