--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
@@ -138,7 +138,7 @@
 													</m:OverflowToolbar>
 												</m:headerToolbar>
 												<m:columns>
-													<m:Column>
+													<m:Column  id="CHECK" width="3rem">
 														<m:CheckBox select="onSelectAll" visible="{= ${VisibilityJSONModel>/isSupplierD} === false}"/>
 													</m:Column>
 													<m:Column id="EBELN" visible="{columnVisibilityModel>/EBELN}" minScreenWidth="Desktop" demandPopin="true">
@@ -174,6 +174,9 @@
 													<m:Column id="WAERS" visible="{columnVisibilityModel>/WAERS}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>WAERS}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
+													<m:Column id="LAST_EKES_EINDT" visible="{columnVisibilityModel>/LAST_EKES_EINDT}" minScreenWidth="Desktop" demandPopin="true">
+														<m:Label text="{i18n>lastEkesDate}" class="columnLabelStyle" wrapping="true"/>
+													</m:Column>															
 													<m:Column id="PRIMO_PERIODO" visible="{columnVisibilityModel>/PRIMO_PERIODO}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>PRIMO_PERIODO}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
@@ -200,6 +203,7 @@
 															<m:Text text="{path : 'OrderJSONModel>KTMNG', formatter : '.importFormatter'}"/>
 															<m:Text text="{OrderJSONModel>MEINS}"/>
 															<m:Text text="{OrderJSONModel>WAERS}"/>
+															<m:Text text="{ path: 'OrderJSONModel>LAST_EKES_EINDT', type: 'it.aupsup.schedulingagreement.type.Date' }"/>
 															<m:Text text="{path : 'OrderJSONModel>PRIMO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
