--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/view/Worklist.view.xml
@@ -1044,6 +1044,46 @@
 															<m:Button type="Accept" text="Save" press="onSaveDocumentHuExceptionsList" />
 														</m:Toolbar>
 													</m:IconTabFilter>
+													<m:IconTabFilter key="18" text="Stati Avvisi Qualità" count="{= ${StatoAvvisiQtaJSONModel>/results}.length}">
+														<m:Table id="StatoAvvisiQtaTable" items="{StatoAvvisiQtaJSONModel>/results}" growingThreshold="200">
+															<m:headerToolbar>
+																<m:OverflowToolbar>
+																	<m:content>
+																		<m:ToolbarSpacer />
+																		<m:Button id="headerStatoAvvisiQtaRefresh" icon="sap-icon://add" press="onAddStatoAvvisiQtaRow" type="Transparent" />
+																	</m:content>
+																</m:OverflowToolbar>
+															</m:headerToolbar>
+															<m:columns>
+																<m:Column minScreenWidth="Desktop" demandPopin="true">
+																	<m:Label text="{i18n>STATUS_CODE}" class="columnLabelStyle" wrapping="true" />
+																</m:Column>
+																<m:Column minScreenWidth="Desktop" demandPopin="true">
+																	<m:Label text="{i18n>LANGUAGE}" class="columnLabelStyle" wrapping="true" />
+																</m:Column>
+																<m:Column minScreenWidth="Desktop" demandPopin="true">
+																	<m:Label text="{i18n>DESCRIPTION}" class="columnLabelStyle" wrapping="true" />
+																</m:Column>			
+																<m:Column minScreenWidth="Desktop" demandPopin="true" hAlign="End" width="5em">
+																	<m:Label class="columnLabelStyle" />
+																</m:Column>													
+															</m:columns>
+															<m:items>
+																<m:ColumnListItem>
+																	<m:cells>
+																		<m:Input value="{StatoAvvisiQtaJSONModel>STATUS_CODE}" enabled="{= ${StatoAvvisiQtaJSONModel>STATUS_CODE} === ''}" />
+																		<m:Input value="{StatoAvvisiQtaJSONModel>LANGUAGE}" enabled="{= ${StatoAvvisiQtaJSONModel>LANGUAGE} === ''}" />
+																		<m:Input value="{StatoAvvisiQtaJSONModel>DESCRIPTION}" />
+																		<m:Button icon="sap-icon://delete" press="deleteStatoAvvisiQtaRow" />
+																	</m:cells>
+																</m:ColumnListItem>
+															</m:items>
+														</m:Table>
+														<m:Toolbar>
+															<m:ToolbarSpacer />
+															<m:Button type="Accept" text="Save" press="onSaveStatoAvvisiQtaList" />
+														</m:Toolbar>
+													</m:IconTabFilter>													
 												</m:items>
 											</m:IconTabBar>
 										</ObjectPageSubSection>
