modifiche per customizing

--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -208,6 +208,7 @@
 							<footer>
 								<m:Toolbar >
 									<m:ToolbarSpacer/>
+									<m:Button type="Accept" text="{i18n>ConfirmOrdAckn}" press="onConfirmOrderAckn" visible="{= ${VisibilityJSONModel>/isSupplierD} === false}"/>
 									<m:Button type="Accept" text="{i18n>Confirm}" press="onConfirmPositions" visible="{= ${VisibilityJSONModel>/isSupplierD} === false}"/>
 								</m:Toolbar>
 							</footer>
